--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,151 @@
 @import "~normalize.css";
 
 @import "_variables";
-@import "modules/hello.scss";
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
 body {
-  background: $wtf;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+  background: linear-gradient(to right, #eef2f3, #8e9eab);
+}
+.main {
+  max-width: 1000px;
+  margin: 60px auto 0;
+}
+h2 {
+  color: #1460aa;
+}
+
+h3 {
+  width: 200px;
+  background-color: rgb(50, 116, 50);
+  border: black;
+  border-radius: 18%;
+  border-bottom: black dotted;
+}
+
+p {
+  color: black;
+}
+
+a {
+  color: rgb(27, 27, 20);
+  text-decoration: none;
+}
+
+a:hover {
+  color: blue;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+#stopka {
+  color: rgb(143, 125, 125);
+  background-color: rgb(63, 39, 2);
+  width: 50%;
+  margin: 0 auto;
+}
+
+#stopka:hover {
+  filter: brightness(150%);
+}
+
+.main-heading {
+  color: white;
+}
+
+.header {
+  background: white;
+  min-height: 60px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.about__heading::before {
+  content: "";
+  background: lightseagreen;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.navigation {
+  padding: 16px;
+  display: none;
+}
+
+.navigation__link {
+  color: black;
+  display: block;
+  margin: 0 0 16px;
+}
+
+.navigation__link--homepage {
+  color: black;
+}
+
+.navigation--open {
+  display: block;
+}
+
+.list {
+  list-style: square;
+}
+
+.table {
+  width: 100%;
+}
+
+.form {
+  border: 4px solid yellow;
+  &__item {
+    display: block;
+  }
+}
+
+.fieldset {
+  max-width: 50vw;
+}
+
+.action--js {
+  color: white;
+  background: black;
+  border: 3px solid red;
+  border-radius: 7%;
+}
+
+.hamburger {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  border: none;
+  background: none;
+}
+
+@media (min-width: 768px) {
+  .navigation {
+    border-radius: 8px;
+    padding: 16px;
+    display: flex;
+    justify-content: space-around;
+    height: 60px;
+    align-items: center;
+  }
+
+  .hamburger {
+    display: none;
+  }
 }
