--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,8 @@
 
 @import "_variables";
 
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap");
+
 html {
   box-sizing: border-box;
 }
@@ -14,6 +16,7 @@ html {
 
 body {
   background: linear-gradient(to right, #eef2f3, #8e9eab);
+  font-family: "Raleway", sans-serif;
 }
 .main {
   max-width: 1000px;
